# pessulus

./: Makefile  README.md
src/: ChangeLog  HACKING  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac  pessulus.in
src/Pessulus/: Makefile.am  Makefile.in  __init__.py  config.py.in  main.py
src/data/: Makefile.am  Makefile.in  pessulus.desktop.in  pessulus.desktop.in.in
src/po/: LINGUAS  POTFILES.in  POTFILES.skip  ar.po  as.po  ast.po  bal.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  ka.po  kn.po  ko.po  (+38 more)
